name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , common
               , common-types
               , containers
               , http-client
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , mtl
               , servant
               , reflex-dom
               , text
               , time
               , uuid
  if impl(ghcjs)
    build-depends: servant-client-ghcjs
  else 
    build-depends: servant-client
  exposed-modules:
    Frontend
    ServantClient
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , frontend
               , aeson
               , bifunctors
               , common
               , containers
               , http-client
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , mtl
               , reflex-dom
               , servant
               , text
               , time
               , uuid
  if impl(ghcjs)
    build-depends: servant-client-ghcjs
  else 
    build-depends: servant-client
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
