name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , common
               , common-types
               , containers
               , http-client
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , mtl
               , servant
               , servant-reflex
               , reflex-dom
               , text
               , time
               , uuid
  exposed-modules:
    Frontend
    ServantReflexClient
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , frontend
               , aeson
               , bifunctors
               , common
               , common-types
               , containers
               , http-client
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , mtl
               , reflex-dom
               , servant
               , servant-reflex
               , text
               , time
               , uuid
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
